welcome.html update

--- a/galaxy/static/welcome.html
+++ b/galaxy/static/welcome.html
@@ -23,7 +23,7 @@
         </div>
         <div class="container">
             <p class="lead">
-                <img src="Galaxy-E-concarneau-team-fin.gif" height="50%" width="50">
+                <img src="Galaxy-E-concarneau-team-fin.gif" height="50%" width="50%">
             </p>
             <p class="lead">
                 Galaxy-E est le fruit d'une preuve de concept de mise en place d'une plateforme de consultation et analyse de données issues de projets de sciences participatives
